tests/snapshots/tests__pre_reduce_run@sort__merge__merge_sort.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: examples/sort/merge/merge_sort.hvmc
---
{4 * {4 {4 {4 * {4 {4 {4 {4 #3 a} {4 * a}} {4 {4 {4 #2 b} {4 * b}} c}} c}} {4 {4 * {4 {4 {4 {4 #1 d} {4 * d}} {4 {4 {4 #0 e} {4 * e}} f}} f}} g}} g}}
pre-reduce:
RWTS   :             449
- ANNI :              69
- COMM :             242
- ERAS :              79
- DREF :              43
- OPER :              16
run:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
